Fix label overflow

--- a/packages/core/src/web/app/components/beambox/RightPanel/ActionsPanel.module.scss
+++ b/packages/core/src/web/app/components/beambox/RightPanel/ActionsPanel.module.scss
@@ -38,3 +38,9 @@
     }
   }
 }
+
+.label {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
